# sciarc

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dokerfile  EPICSEvent.proto  LICENSE.txt  README.md  build.sh  conanfile.txt  dcomp  epics_patch.sh  go.mod  go.sum  main.go
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  reinstall-cmake.sh
.github/workflows/: create-image.yml
cmd/: gateway.go  node.go  root.go
engine/src/: dcomp.cpp  dcomp.h  sciarc.cpp  sciarc.h
engine/src/epics/: EpicsChannel.cpp  EpicsChannel.h  EpicsChannelMonitor.cpp  EpicsChannelMonitor.h  epics.cpp  epics.h
engine/test/: Epics.cpp  SciarcTest.cpp  epics-test.db  test.cpp
services/: GetApi.go  StartMonitorApi.go  StopMonitorApi.go  api.go  api_dispatcher.go  channel_event_dispatcher.go  cluster.go  cluster_test.go  event_dispatcher.go  node.go
services/epics/: epics.go  epics_test.go
services/serialization/: EPICSEvent.pb.go  EPICSEvent.pb_test.go
tools/: cling_clone.sh  epics_patch.sh  launch_epics_test_ioc.sh  llvm.sh
